# AI_FAANG_investment_analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/faang_investment_crew/: crew.py  main.py
src/faang_investment_crew/config/: agents.yaml  tasks.yaml
src/faang_investment_crew/knowledge/: faang_report.md_2025-03-29_21-24-08.html  faang_report.md_2025-03-29_21-24-08.md
src/faang_investment_crew/tools/: markdown_generator.py  report_utils.py  serper_search_tool.py  yahoo_finance.py
